# diorama

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE.txt  README.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/examples-common/: Cargo.toml
crates/examples-common/src/: lib.rs  noise.rs
examples/alien_planet/: atmosphere.rs  fauna.rs  flora.rs  main.rs  materials.rs  scanner.rs  terrain.rs
examples/alien_planet/assets/shaders/: crystal.wgsl
examples/aurora_forge/: animation.rs  main.rs  materials.rs  scene.rs
examples/aurora_forge/assets/shaders/: aurora_ribbon.wgsl  forge_plasma.wgsl
examples/clockwork_observatory/: animation.rs  main.rs  scene.rs
examples/museum/: artworks.rs  config.rs  helpers.rs  main.rs  materials.rs  room_layout.rs  shader_materials.rs
examples/museum/assets/dialogue/: painting.yarn
examples/museum/assets/shaders/: constellation_shader.wgsl  energy_field_shader.wgsl  fractal_shader.wgsl  geometric_shader.wgsl  glass_shader.wgsl  holographic_shader.wgsl  liquid_metal_shader.wgsl  morphing_sculpture_shader.wgsl  portal_shader.wgsl
examples/mycelial_reverie/: animation.rs  main.rs  materials.rs  scene.rs
examples/mycelial_reverie/assets/shaders/: mushroom_glow.wgsl  spore_pool.wgsl
examples/ocean_depths/: atmosphere.rs  coral.rs  creatures.rs  dialogue.rs  main.rs  materials.rs  seafloor.rs  shipwreck.rs  treasure.rs
examples/ocean_depths/assets/dialogue/: ocean.yarn
examples/ocean_depths/assets/shaders/: caustics.wgsl  coral.wgsl  fish_scales.wgsl  jellyfish.wgsl  mossy_rock.wgsl  treasure_chest.wgsl  turtle_shell.wgsl
examples/platformer/: collectibles.rs  game_ui.rs  level.rs  main.rs  movement.rs  platforms.rs
examples/simple/: animation.rs  main.rs  materials.rs  scene.rs
examples/simple/assets/shaders/: animated_shader.wgsl
src/: controls.rs  diag.rs  firstsight.rs  inspector.rs  lib.rs  physics.rs  picking.rs  player.rs  state.rs  window.rs  wireframe.rs
